2001-04-24  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* config.sub, config.guess: Updated to recent versions from GNU CVS
	to get it working on PARISC. Thanks to LaMont Jones
	<lamont@smallone.fc.hp.com>.

2001-04-18  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* tools/dump-xml.c: Fixed DOCTYPE root identifier to contain
	no namespace prefix. Thanks to Andreas Goll.

2001-04-14  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* libsmi-0.2.16.tar.gz: released version 0.2.16.

	* tools/smilint.c, smiquery.c: fixed obsolete use of the
	optind variable.

	* libsmi-0.2.15.tar.gz: released version 0.2.15.

	* tools/dump-stools.c: Update for stools >= 0.1.16.

2001-04-09  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/parser-smi.y: Fixed RFC1155-SMI::Counter, Gauge, and
	TimeTicks ranges.

2001-03-15  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* tools/dump-jax.c: Fixed a bug on non not-accessible INDEX
	columns, reported by Joerg Mattes <joerg.mattes@nch.it>.

2001-03-12  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/check.c: Bill contributed more checks on group/compliance
	statements.

	* lib/check.c: Fixed core dump with recent type checks. Thanks
	to Bill.

2001-03-06  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* libsmi-0.2.14.tar.gz: released version 0.2.14.

	* lib/check.c: Added more type usage checks.

2001-03-05  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/parser-smi.y: Added some defval and type usage checks.

2001-03-01  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/parser-smi.y: Added checks to compare SEQUENCEs against
	columnar objects.

2001-02-26  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/check.c: Lowered severity of recent compliant status checks.

	* lib/parser-smi.y: Bill contributed check for imported Counter64
	when used.

	* lib/check.c: Bill contributed check for node >= group >= compliance
	status constraints.

2001-02-15  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/scanner-smi.l: Martin Schulz noticed a problem with